# CloudMidterm

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_dashboard.py
.github/workflows/: deploy.yml
simulation/: __init__.py  charts.py  company.py  controller.py  country.py  currency.py  live_simulation.py  market.py  marketEngineengine.py  market_tick.py  run_simulation.py  snapshot.py  test_simulation.py
simulation/narrorator/: agent.py  models.py
simulation/snapshots/: week_1.json  week_10.json  week_11.json  week_12.json  week_13.json  week_14.json  week_15.json  week_16.json  week_17.json  week_18.json  week_19.json  week_2.json  week_20.json  week_21.json  week_22.json  week_23.json  week_24.json  week_25.json  week_26.json  week_27.json  week_28.json  week_29.json  week_3.json  week_30.json  week_31.json  week_32.json  week_33.json  week_34.json  week_35.json  week_36.json  week_37.json  (+21 more)
snapshots/: week_0.json  week_1.json  week_10.json  week_100.json  week_101.json  week_102.json  week_103.json  week_104.json  week_105.json  week_106.json  week_107.json  week_108.json  week_109.json  week_11.json  week_110.json  week_111.json  week_112.json  week_113.json  week_114.json  week_115.json  week_116.json  week_117.json  week_118.json  week_119.json  week_12.json  week_120.json  week_121.json  week_122.json  week_123.json  week_124.json  week_125.json  week_126.json  week_127.json  week_128.json  week_129.json  week_13.json  week_130.json  week_14.json  week_15.json  week_16.json  (+91 more)
visualization/: dashboard.py  steamlitGraphing.py
